force-app/main/default/objects/InventoryOutOrderLineItem__c/InventoryOutOrderLineItem__c.object-meta.xml
<CustomObject>
    <label>본사출고상세</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>