force-app/main/default/objects/InventoryOutOrderLineItem__c/fields/ConfirmQuantity__c.field-meta.xml
<CustomField>
    <fullName>ConfirmQuantity__c</fullName>
    <description>변경불가</description>
    <label>Confirm Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>