force-app/main/default/objects/InventoryOutOrderLineItem__c/fields/ConfirmQuantityOrder__c.field-meta.xml
<CustomField>
    <fullName>ConfirmQuantityOrder__c</fullName>
    <label>Confirm Quantity Order</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>