force-app/main/default/objects/InventoryOutOrderLineItem__c/fields/InventoryOutOrder__c.field-meta.xml
<CustomField>
    <fullName>InventoryOutOrder__c</fullName>
    <label>Inventory Out Order</label>
    <referenceTo>InventoryOutOrder__c</referenceTo>
    <relationshipLabel>Inventory Out Order LineItem</relationshipLabel>
    <relationshipName>ReleaseItem</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>