force-app/main/default/objects/InventoryOutOrderLineItem__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <formula>NetPrice__c * Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>