force-app/main/default/objects/InventoryOutOrderLineItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Inventory Out Order LineItem</relationshipLabel>
    <relationshipName>Inventory_Out_Order_LineItem</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>