force-app/main/default/objects/InventoryOutOrderLineItem__c/fields/PurchaseOrderLineItem__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOrderLineItem__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Purchase Order Line Item</label>
    <referenceTo>PurchaseOrderLineItem__c</referenceTo>
    <relationshipLabel>Inventory Out Order LineItem</relationshipLabel>
    <relationshipName>InventoryOutOrderLineItem</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>