force-app/main/default/objects/InventoryOutOrderLineItem__c/fields/QuantityOrder__c.field-meta.xml
<CustomField>
    <fullName>QuantityOrder__c</fullName>
    <description>변경불가</description>
    <label>Quantity Order</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>