force-app/main/default/objects/InventoryOutOrderLineItem__c/fields/SkuOption2__c.field-meta.xml
<CustomField>
    <fullName>SkuOption2__c</fullName>
    <label>Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SkuOption2</valueSetName>
    </valueSet>
</CustomField>