force-app/main/default/objects/InventoryOutOrderLineItem__c/fields/SkuOption4__c.field-meta.xml
<CustomField>
    <fullName>SkuOption4__c</fullName>
    <label>Sku Option4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SkuOption4</valueSetName>
    </valueSet>
</CustomField>