force-app/main/default/objects/InventoryOutOrderLineItem__c/fields/TaxType__c.field-meta.xml
<CustomField>
    <fullName>TaxType__c</fullName>
    <description>수정불가 / 
영세;내세; 등은 향후 해외버젼때 추가</description>
    <label>Tax Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxType</valueSetName>
    </valueSet>
</CustomField>